# bar_leaderboardv2

./: .gitignore  AUTOMATION_SETUP.md  README.md  README_DEPLOYMENT.md  app.py  check_online_data_last_modified.py  cleanup.sh  config.py  create_season_1_data.py  create_season_1_leaderboard.py  data_validation.py  demo_replay_downloader.py  diagnostic_upload.py  fast_replay_downloader.py  flask_app.py  hybrid_data_processor.py  hybrid_demo.py  nation_ranking_pipeline.py  performance_monitoring.py  pyproject.toml  replay_gap_filler.py  requirements.txt  run_all_pipelines.py  run_hybrid_processing.py  run_leaderboard.py  run_nation_rankings.py  run_pipelinev2.py  run_team_analysis.py  search_player.py  search_praedyth.py  team_analysis.py  test_automation.py  test_enhanced_app.py  test_legacy_team_games.py  test_seasons.py  utils.py  wsgi.py  wsgi_pythonanywhere.py
.github/scripts/: pythonanywhere_uploader.py  upload_essential_files.py  upload_to_pythonanywhere.py
.github/workflows/: automated-pipeline.yml  bar-leaderboard-automation.yml  leaderboard-automation-v2.yml  leaderboard-pipeline.yml
static/: app.py
static/css/: styles.css
static/js/: common.js  efficiency_analysis.js  nation-rankings.js  player-leaderboard.js
templates/: base.html  efficiency_analysis.html  index.html  nation_rankings.html  team_rankings.html
