[project]
name = "nation_leaderboard"
version = "0.1.0"
description = "Nation leaderboard project"
requires-python = ">=3.8"
license = {text = "MIT"}

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "flask",
    "Flask-Cors",
    "pandas",
    "numpy",
    "pyarrow",
    "werkzeug",
    "requests",
    "networkx>=3.1",
    "scikit-learn>=1.3.2",
    "psutil>=5.8.0",
    "pyyaml>=6.0",
]

[project.urls]
"Homepage" = "https://github.com/yourusername/nation_leaderboard"  # Replace with your actual URL
"Bug Tracker" = "https://github.com/yourusername/nation_leaderboard/issues" # Replace with your actual URL

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["."]
